--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,11 +32,17 @@ ul {
     font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
 }
 
+.portfolioImg {
+    height: 200px;
+    width: 200px;
+}
 
 .imgAbout {
     float: left;
     padding-right: 10px;
     position: relative;
+    width: 200px;
+    height: 200px;
 }
 
 .pPort {
